<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad_40dp"
    android:paddingRight="@dimen/pad_40dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/logo_login" />

    <EditText
        android:id="@+id/user_name"
        style="@style/txt_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_username"
        android:inputType="textEmailAddress"
        android:hint="@string/username">
        <requestFocus />
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/gray_divider" />

    <EditText
        android:id="@+id/password"
        style="@style/txt_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_pwd"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/gray_divider" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/txt_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_pwd"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" >
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/gray_divider" />

    <EditText
        android:id="@+id/user_email"
        style="@style/txt_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email_add"
        android:inputType="textEmailAddress" >
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/gray_divider" />

    <EditText
        android:id="@+id/user_phone"
        style="@style/txt_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_phone"
        android:hint="@string/phone">
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/gray_divider" />

    <EditText
        android:id="@+id/user_birthday"
        style="@style/txt_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_birthday"
        android:hint="@string/birthday">
    </EditText>

    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/pad_10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_20dp"
            android:layout_marginRight="@dimen/pad_40dp"
            android:text="@string/male"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_20dp"
            android:layout_marginLeft="@dimen/pad_40dp"
            android:text="@string/female"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_register"
        style="@style/btn_blue_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_10dp"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/pad_10dp"
            android:paddingBottom="@dimen/pad_20dp"
            android:text="@string/sign_in"
            android:textColor="@color/main_color_blue"
            android:textSize="@dimen/txt_13sp" />

        <TextView
            android:id="@+id/lblReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/pad_10dp"
            android:paddingBottom="@dimen/pad_10dp"
            android:text="@string/new_here"
            android:textColor="@color/main_color_blue"
            android:textSize="@dimen/txt_13sp"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>