<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainv"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/main_color_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rings_blue"
        android:layout_marginTop="-10dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/user_find"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/pad_40dp"
        android:paddingRight="@dimen/pad_40dp"
        android:paddingBottom="@dimen/pad_30dp"
        android:layout_alignParentBottom="true"
       >

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_5dp"
        android:text="@string/no_one_around"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_16sp" />

        <LinearLayout
            android:id="@+id/btnInvite"
            style="@style/btn_blue_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_invite_blue"
                android:drawablePadding="@dimen/pad_5dp"
                android:gravity="center_vertical"
                android:text="@string/invite_ur_frnds"
                android:textColor="@color/main_color_blue"
                android:textSize="@dimen/txt_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnScan"
            style="@style/btn_red_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_rect"
            android:layout_marginTop="@dimen/pad_10dp" >

            <TextView
                android:id="@+id/lblScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_scan"
                android:drawablePadding="@dimen/pad_5dp"
                android:gravity="center_vertical"
                android:text="@string/scan_again"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
